kustomize/auth-forward/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: betaling-auth-forward
spec:
  forwardAuth:
    #address: http://flais-auth-forward-simple-test.flais-auth-forward-simple-test:8080/_oauth
    authResponseHeaders:
      - Authorization
    trustForwardHeader: true
