kustomize/auth-forward/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betaling-auth-forward
spec:
  selector:
    matchLabels:
      app: betaling-auth-forward
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: betaling-auth-forward
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: ghcr.io/fintlabs/flais-auth-forward-service:sha-65fbbb4
          name: auth-forward
          ports:
            - containerPort: 8080
              protocol: TCP
#          envFrom:
#            - secretRef:
#                name: auth-forward
