kustomize/auth-forward/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: betaling-auth-forward
spec:
  type: ClusterIP
  ports:
    - name: auth-http
      port: 8080
      targetPort: 8080
